# api/route/api.yml
@@ -48,40 +48,7 @@ paths:
                   error:
                     type: string
                     description: Error message.
-  /schema/{workspace}:
-    get:
-      summary: Get table schema
-      description: Retrieves the schema of tables in the specified workspace.
-      parameters:
-        - in: path
-          name: workspace
-          required: true
-          schema:
-            type: string
-          description: The workspace to retrieve the schema from.
-      responses:
-        '200':
-          description: Schema retrieved successfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  schema:
-                    type: array
-                    items:
-                      type: object
-                    description: The schema of the tables.
-        '500':
-          description: Error retrieving schema.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    description: Error message.
+
   /{workspace}/metadata:
     get:
       summary: Get metadata for workspace
